# pbs-installer

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml  update.yml
docs/: index.md
scripts/: find_versions.py  update.sh
src/pbs_installer/: __init__.py  __main__.py  _install.py  _utils.py  _versions.py  versions.json
