[project]
name = "pbs-installer"
description = "Installer for Python Build Standalone"
authors = [
    {name = "Frost Ming", email = "me@frostming.com"},
]
dependencies = []
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]

[project.optional-dependencies]
download = [
    "requests>=2.24.0",
]
install = [
    "zstandard>=0.21.0",
]
all = [
    "pbs-installer[download,install]"
]

[project.scripts]
pbs-install = "pbs_installer.__main__:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
]

[tool.pdm.version]
source = "scm"

[tool.pdm.scripts]
update = { shell = "./scripts/update.sh" }

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | src/pythonfinder/_vendor
)
'''

[tool.ruff]
line-length = 100
extend-select = ["I"]
target-version = "py310"
