[project]
name = "pbs-installer"
description = "Installer for Python Build Standalone"
authors = [
    {name = "Frost Ming", email = "me@frostming.com"},
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]

[project.optional-dependencies]
download = [
    "httpx<1,>=0.27.0",
]
install = [
    "zstandard>=0.21.0",
]
all = [
    "pbs-installer[download,install]"
]

[project.scripts]
pbs-install = "pbs_installer.__main__:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"

[tool.pdm.scripts]
update = { shell = "./scripts/update.sh" }

[tool.pdm.dev-dependencies]
doc = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.14",
    "mkdocstrings[python]>=0.24",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I"]
